Added the initial code for a br_je_plc_the_monarchy_in_question JE for the PLC

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -86,6 +86,10 @@
  br_je_if_has_researched_stormtroopers_tt: "If has researched [GetTechnology('stormtroopers').GetName]"
  br_je_if_has_researched_military_aviation_tt: "If has researched [GetTechnology('military_aviation').GetName]"
  br_je_if_has_researched_mobile_armor_tt: "If has researched [GetTechnology('mobile_armor').GetName]"
+ #br_je_plc_the_monarchy_in_question
+ br_je_plc_the_monarchy_in_question: "The Monarchy in Question"
+ br_je_plc_the_monarchy_in_question_lobby: "$br_je_plc_the_monarchy_in_question_reason$"
+ br_je_plc_the_monarchy_in_question_reason: "It has been quite a bit of time since the reforms of Jadwiga II, and even though our Commonwealth owes a good deal from the monarchy, some are now calling it into question. Claims of it as an outdated institution with no basis in our modernizing world. Yet there are still those who are defending it as well, both for the sake of tradition and those using the historical precedent created by Jadwiga II as a liberalizing figure. Either way, a referendum is being demanded, and the fate of our monarchy will be decided by our peoples."
 
  ###
  ###Scripted Progress Bars
