--- a/localization/russian/br_modifiers_l_russian.yml
+++ b/localization/russian/br_modifiers_l_russian.yml
@@ -49,7 +49,7 @@
  br_modifier_fur_trade: "Fur Trade"
  br_modifier_golden_liberty: "Golden Liberty"
  br_modifier_eastern_slavery: "Eastern Slavery"
- br_modifier_eastern_oppression: "Eastern Oppression"
+ br_modifier_failure_at_hadiach: "Failure at Hadiach"
  br_modifier_noble_democracy: "Noble Democracy"
  br_modifier_magnate_oligarchy: "Magnate Oligarchy"
  br_modifier_slave_to_liberty: "Slave To Liberty"
