reworked princely league JE V1

--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -192,9 +192,20 @@
  #je_princely_league_main
  je_princely_league_main: "Princely League"
  #je_princely_league_main_goal:0 "???"
- je_princely_league_main_reason: "We must break free from the chain held by our overlord, but in order to achieve this we will have to gather support from other countries, in particular our fellow subjects would be good allies."
+ je_princely_league_main_reason: "We must break free from the chain held by our overlord, but in order to achieve this we will have to gather support from other countries, in particular our fellow subjects would be good allies.\n$TOOLTIP_DELIMITER$\n$br_je_princely_league_main_reason_left_side_info$"
  je_princely_league_main_lobby: "$je_princely_league_main_reason$"
  princely_league_exists_tt: "The Gemanic League exists."
+ br_princely_league_situation_id: "br_princely_league_situation_id"
+ br_princely_league_left_side_name: "Princely League"
+ br_princely_league_left_side_desc: "br_princely_league_left_side_desc"
+ br_princely_league_left_faction_members: "Princely League Members"
+ br_princely_league_left_faction_members_desc: "These are vassals of the HRE who have chosen to oppose the Emperor"
+ br_princely_league_right_side_name: "Loyalists"
+ br_princely_league_right_side_desc: "br_princely_league_right_side_desc"
+ #je_princely_league_main stances
+ br_princely_league_main_independence_stance_flag: "Independence"
+ br_princely_league_main_autonomy_stance_flag: "Autonomy"
+ br_je_princely_league_main_reason_left_side_info: "We are a member of the #b #yellow $br_princely_league_left_side_name$#!#!: \n$TAB$Currently our stance is: #b #blue [GetPlayer.MakeScope.Var('br_princely_league_main_left_side_member_stance_var').GetFlagName]#!#!"
 
  
  #'Generic Journals'
