added loc for the new modifiers

--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -146,6 +146,8 @@
  br_modifier_princely_league_region_intrests_desc: "We have an intrest in all regions who have a concern in joining the Princely League"
  br_modifier_princely_league: "Princely League"
  br_modifier_princely_league_leader: "Princely League Leader"
+ br_modifier_princely_league_success: "Princely League Success"
+ br_modifier_princely_league_failure: "Princely League Failure"
 
  #Arab/Muslim/Africa
  br_modifier_desert_culture: "Desert Culture"
