--- a/localization/korean/br_journals_l_korean.yml
+++ b/localization/korean/br_journals_l_korean.yml
@@ -195,4 +195,4 @@
  je_princely_league_main: "Princely League"
  #je_princely_league_main_goal:0 "???"
  je_princely_league_main_reason: "We must break free from the chain held by our overlord, but in order to achieve this we will have to gather support from other countries, in particular our fellow subjects would be good allies."
- princely_league_exists_tt: "The Gemanic League exists"
+ princely_league_exists_tt: "The #b Germanic League#! exists"
