updated loc for the br_je_create_the_princely_league JE

--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -189,11 +189,14 @@
  #je_control_the_southern_lowlands_goal:0 "We must establish our control over the southern lowlands."
  je_control_the_southern_lowlands_reason: "We have to gain control over the southern regions, perhaps we can request control over these regions from our overlord."
  je_control_the_lowlands_advance: "Advances the Journal Entry 'Control the Lowlands'"
+ #br_je_create_the_princely_league
+ br_je_create_the_princely_league: "Create the $je_princely_league_main$"
+ br_je_create_the_princely_league_reason: "$je_princely_league_main_desc$"
  #je_princely_league_main
  je_princely_league_main: "Princely League"
- #je_princely_league_main_goal:0 "???"
- je_princely_league_main_reason: "We must break free from the chain held by our overlord, but in order to achieve this we will have to gather support from other countries, in particular our fellow subjects would be good allies.\n$TOOLTIP_DELIMITER$\n$br_je_princely_league_main_reason_left_side_info$"
- je_princely_league_main_lobby: "$je_princely_league_main_reason$"
+ je_princely_league_main_desc: "We must break free from the chain held by our overlord, but in order to achieve this we will have to gather support from other countries, in particular our fellow subjects would be good allies."
+ je_princely_league_main_reason: "$je_princely_league_main_desc$\n$TOOLTIP_DELIMITER$\n$br_je_princely_league_main_reason_left_side_info$"
+ je_princely_league_main_lobby: "$je_princely_league_main_desc$"
  princely_league_exists_tt: "The #b Germanic League#! exists"
  br_princely_league_situation_id: "br_princely_league_situation_id"
  br_princely_league_left_side_name: "Princely League"
