commented out br_je_invite_members_to_league_button

--- a/localization/english/br_scripted_buttons_l_english.yml
+++ b/localization/english/br_scripted_buttons_l_english.yml
@@ -20,7 +20,7 @@
  princely_league_not_formed_tt: "The Princely League has not formed yet."
  princely_league_being_formed_tt: "All countries in Europe will be informed and all HRE subjects will be become League candidates."
 
- #je_invite_members_to_league_button
- je_invite_members_to_league_button: "Invite members."
- je_invite_members_to_league_button_desc: "Invite other subject of the HRE to join the Princely League."
- formed_princely_league_tt: "You formed the Princely League."
+#  #je_invite_members_to_league_button
+#  je_invite_members_to_league_button: "Invite members."
+#  je_invite_members_to_league_button_desc: "Invite other subject of the HRE to join the Princely League."
+#  formed_princely_league_tt: "You formed the Princely League."
