--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -195,7 +195,7 @@
  #je_princely_league_main
  je_princely_league_main: "Princely League"
  je_princely_league_main_desc: "We must break free from the chain held by our overlord, but in order to achieve this we will have to gather support from other countries, in particular our fellow subjects would be good allies."
- je_princely_league_main_reason: "$je_princely_league_main_desc$\n$TOOLTIP_DELIMITER$\n$br_je_princely_league_main_reason_left_side_info$"
+ je_princely_league_main_reason: "[GetPlayer.GetCustom('je_princely_league_main_reason_custom_loc')]"
  je_princely_league_main_lobby: "$je_princely_league_main_desc$"
  princely_league_exists_tt: "The #b Germanic League#! exists"
  br_princely_league_situation_id: "br_princely_league_situation_id"
@@ -208,7 +208,12 @@
  #je_princely_league_main stances
  br_princely_league_main_independence_stance_flag: "Independence"
  br_princely_league_main_autonomy_stance_flag: "Autonomy"
- br_je_princely_league_main_reason_left_side_info: "We are a member of the #b #yellow $br_princely_league_left_side_name$#!#!: \n$TAB$Currently our stance is: #b #blue [GetPlayer.MakeScope.Var('br_princely_league_main_left_side_member_stance_var').GetFlagName]#!#!"
+ br_je_princely_league_main_reason_left_side: "$je_princely_league_main_desc$\n\n$br_je_princely_league_main_reason_left_side_members_will_join_war_tt$\n$TOOLTIP_DELIMITER$\n$br_je_princely_league_main_status_desc_left_side$"
+ br_je_princely_league_main_reason_left_side_members_will_join_war_tt: "When the independence of any member of the #b #yellow $br_princely_league_left_side_name$#!#! is threatened then all other members off the #b #yellow $br_princely_league_left_side_name$#!#! will join them in the [concept_diplomatic_play], this is because of #b #blue $br_princely_league_membership$#!#! [concept_treaty]"
+ br_je_princely_league_main_status_desc_left_side: "We are a member of the #b #yellow $br_princely_league_left_side_name$#!#!: \n$TAB$Currently our stance is: #b #blue [GetPlayer.MakeScope.Var('br_princely_league_main_left_side_member_stance_var').GetFlagName]#!#!"
+ br_je_princely_league_main_reason_right_side: "Our subjects are becoming restless, they have started to resent the Empire and now as their latest act of defiance they have formed the so called #b #yellow $br_princely_league_left_side_name$#!#! a organisation to meant to protect them form our influence. There are those within our vassals who would seek to use the League to gain their independence form us, we'll have to act carefully."
+ br_je_princely_league_main_status_desc_right_side: "We are a member of the #b #yellow $br_princely_league_right_side_name$#!#!"
+ br_je_princely_league_main_status_desc_neutral_side: "We are a member of the #b #yellow Neutral#!#! side"
 
  
  #'Generic Journals'
