Added remaining loc for the je_princely_league_main JE

--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -200,11 +200,15 @@
  princely_league_exists_tt: "The #b Germanic League#! exists"
  br_princely_league_situation_id: "br_princely_league_situation_id"
  br_princely_league_left_side_name: "Princely League"
- br_princely_league_left_side_desc: "br_princely_league_left_side_desc"
+ br_princely_league_left_side_desc: "These coutries have chosen band together in a league to protect their autonomy within the empire and to oppose the Emperor."
  br_princely_league_left_faction_members: "Princely League Members"
  br_princely_league_left_faction_members_desc: "These are vassals of the HRE who have chosen to oppose the Emperor"
  br_princely_league_right_side_name: "Loyalists"
- br_princely_league_right_side_desc: "br_princely_league_right_side_desc"
+ br_princely_league_right_side_desc: "These are vassals of the HRE who have chosen to remain loyal to the Emperor"
+ br_princely_league_right_faction_members: "Loyalists Members"
+ br_princely_league_right_faction_members_desc: "These are vassals of the HRE who have chosen to remain loyal to the Emperor"
+ br_princely_league_neutral_faction_members: "Neutral Members"
+ br_princely_league_neutral_faction_members_desc: "These are vassals of the HRE who are attempting to remain neutral in the matter"
  #je_princely_league_main stances
  br_princely_league_main_independence_stance_flag: "Independence"
  br_princely_league_main_autonomy_stance_flag: "Autonomy"
