--- a/localization/english/br_scripted_buttons_l_english.yml
+++ b/localization/english/br_scripted_buttons_l_english.yml
@@ -24,3 +24,28 @@
 #  je_invite_members_to_league_button: "Invite members."
 #  je_invite_members_to_league_button_desc: "Invite other subject of the HRE to join the Princely League."
 #  formed_princely_league_tt: "You formed the Princely League."
+
+ #br_je_princely_league_main_leader_actions_button_group
+ br_je_princely_league_main_leader_actions_button_group: "Leader Actions"
+ br_je_princely_league_main_leader_actions_button_group_desc: ""
+
+ #br_je_princely_league_main_chose_side_button_group
+ br_je_princely_league_main_chose_side_button_group: "Chose Side"
+ br_je_princely_league_main_chose_side_button_group_desc: "We must chose a side to support"
+
+ #br_je_princely_league_main_chose_stance_button_group
+ br_je_princely_league_main_chose_stance_button_group: "Chose Stance"
+ br_je_princely_league_main_chose_stance_button_group_desc: "We must chose a stance on whether we support Autonomy within the Empire or Independence"
+
+ #br_je_princely_league_main_join_left_side_button
+ br_je_princely_league_main_join_left_side_button: "Join the $br_princely_league_left_side_name$"
+ br_je_princely_league_main_join_left_side_button_desc: "Join the $br_princely_league_left_side_name$"
+ #br_je_princely_league_main_join_right_side_button
+ br_je_princely_league_main_join_right_side_button: "Join the $br_princely_league_right_side_name$"
+ br_je_princely_league_main_join_right_side_button_desc: "Join the $br_princely_league_right_side_name$"
+ #br_je_princely_league_main_left_side_favour_independence_button
+ br_je_princely_league_main_left_side_favour_independence_button: "Favour Independence"
+ br_je_princely_league_main_left_side_favour_independence_button_desc: "Favour Independence"
+ #br_je_princely_league_main_left_side_favour_autonomy_button
+ br_je_princely_league_main_left_side_favour_autonomy_button: "Favour Autonomy"
+ br_je_princely_league_main_left_side_favour_autonomy_button_desc: "Favour Autonomy"
