Change last remaining loc from Germanic League to Princely League

--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -197,7 +197,7 @@
  je_princely_league_main_desc: "We must break free from the chain held by our overlord, but in order to achieve this we will have to gather support from other countries, in particular our fellow subjects would be good allies."
  je_princely_league_main_reason: "[GetPlayer.GetCustom('je_princely_league_main_reason_custom_loc')]"
  je_princely_league_main_lobby: "$je_princely_league_main_desc$"
- princely_league_exists_tt: "The #b Germanic League#! exists"
+ princely_league_exists_tt: "The #b Princely League#! exists"
  br_princely_league_situation_id: "br_princely_league_situation_id"
  br_princely_league_left_side_name: "Princely League"
  br_princely_league_left_side_desc: "These coutries have chosen band together in a league to protect their autonomy within the empire and to oppose the Emperor."
