changed je_princely_league_main to br_je_princely_league_main

--- a/localization/braz_por/br_journals_l_braz_por.yml
+++ b/localization/braz_por/br_journals_l_braz_por.yml
@@ -191,8 +191,8 @@
 
  je_control_the_lowlands_advance: "Advances the Journal Entry 'Control the Lowlands'"
 
- #je_princely_league_main
- je_princely_league_main: "Princely League"
- #je_princely_league_main_goal:0 "???"
- je_princely_league_main_reason: "We must break free from the chain held by our overlord, but in order to achieve this we will have to gather support from other countries, in particular our fellow subjects would be good allies."
+ #br_je_princely_league_main
+ br_je_princely_league_main: "Princely League"
+ #br_je_princely_league_main_goal:0 "???"
+ br_je_princely_league_main_reason: "We must break free from the chain held by our overlord, but in order to achieve this we will have to gather support from other countries, in particular our fellow subjects would be good allies."
  princely_league_exists_tt: "The #b Princely League#! exists"
