Added loc to last 2 remaining JE's

--- a/localization/english/br_plc_l_english.yml
+++ b/localization/english/br_plc_l_english.yml
@@ -33,10 +33,10 @@
  br_je_plc_jadwigan_reform_3_reason: "One of our Reform points, though unpopular to many, was to end our policies of Polonization and to restore the strength of the Warsaw Confederation. We have many minorities in our lands, from Jews, Germans, Ruthenians, Russians, etc… They need to have their voices heard or risk separatism within our borders and our autonomies."
  #br_je_plc_jadwigan_reform_4
  br_je_plc_jadwigan_reform_4: "Jadwigan Reforms: A New Economic Model"
- br_je_plc_jadwigan_reform_4_reason: "TODO."
+ br_je_plc_jadwigan_reform_4_reason: "In this new age of Industrialization, the reliance on our agrarian past is becoming heavily outmoded. We must help prop up new industries and do our best to get an economic edge against our rivals!"
  #br_je_plc_jadwigan_reform_5
  br_je_plc_jadwigan_reform_5: "Jadwigan Reforms: Military Reformation"
- br_je_plc_jadwigan_reform_5_reason: "TODO"
+ br_je_plc_jadwigan_reform_5_reason: "The days of regular melee combat and even pike-and-shot are coming to an end faster each day. A reliance on the old levy systems of old are therefor also obsdolete. The military must be a standing professional force loyal to the nation! Not just to some member of the Szlachta and even the Kings themselves. Nor should we have to rely on peasant conscripts who may run away as soon as a battle turns."
  #br_je_plc_moderate_reform_1
  br_je_plc_moderate_reform_1: "Moderate Reform: Ending Feudalism"
  br_je_plc_moderate_reform_1_reason: "The Feudalistic Model of Land Management has been slowly becoming more and more obsolete as the decades go by. But, we must be cautious as to not upset the Szlachta. Perhaps an option where the peasants are “free” but still work for their former lords."
