--- a/localization/english/tge/tge_l_english.yml
+++ b/localization/english/tge/tge_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  # dlc metadata
  dlc_tge: "Basileia Romaion: The Golden Eagle"
- dlc_tge_desc: ""
+ dlc_tge_desc: ""Arise Sons and Daughters and Huītzilōpōchtli! Carry forward the Empire of the Sun and ensure that the sun shall rise forever more!"\n\nThe arrival of Viking colonizers in the 12th century sent shockwaves across the Americas, between waves of pandemics and exposure to European innovations and lifestyles. Since then, the peoples of the Americas have risen to new heights, although none higher than the Empire of the Nahua. Seated at the Holy City of Mexico-Tenochtitlan, the Nahua God-Emperors, the Golden Eagles, have led forth their armies in the name of their patron diety, Huītzilōpōchtli. Following the arrival of the Elysians with their culture and technology, a new era of innovation and expansion has been inaugurated, all while Mesoamerica chafes under generations of slavery and exploitation to fuel the Empire."
  
  # buildings
  building_huey_teocalli: "Huēyi Teōcalli"
