Added proper objective subgoals

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -1,6 +1,9 @@
 ﻿l_english:
  ### BR Misc ###
-
+ je_group_br_hidden: "Super Secret Tzatziki Sauce Stash"
+ je_br_intro: "Tzatziki Sauce"
+ je_br_intro_reason: "Working with one big handful at a time, lightly squeeze the grated cucumber between your palms over the sink to remove excess moisture. Transfer the squeezed cucumber to a serving bowl, and repeat with the remaining cucumber. Add the yogurt, olive oil, herbs, lemon juice, garlic, and salt to the bowl, and stir to blend. Let the mixture rest for 5 minutes to allow the flavors to meld. Taste and add additional chopped fresh herbs, lemon juice, and/or salt, if necessary (I thought this batch was just right as-is). Serve tzatziki immediately or chill for later. Leftover tzatziki keeps well, chilled, for about 4 days."
+ 
  ## Interest Groups
 
  ig_orthodox_patriarch: "Klirikoí"
