--- a/localization/english/tge_general/tge_objectives_l_english.yml
+++ b/localization/english/tge_general/tge_objectives_l_english.yml
@@ -8,4 +8,4 @@
  br_tge_objective_name_MAY_PAN: "#v $MAY_PAN$#!"
  br_tge_objective_desc_MAY_PAN: "#lore The League of Màyapáan holds on by a thread. Once the center of Mayan culture and commerce, Màyapáan has remained stagnant for over a century. Will the Mayans raise a unified front or will they be torn apart by the Nahua?#!"
  br_tge_objective_name_MES_IRE: "#v $MES_IRE$#!"
- br_tge_objective_desc_MES_IRE: "The Purépecha people stand alone in Mesoamerica. Through centuries of relentless defiance, they have resisted the influence of both the Nahua and Elysian missionaries. As the sun seems to set on Mesoamerica, will the Purépecha be able to retain their identity?"
+ br_tge_objective_desc_MES_IRE: "#lore The Purépecha people stand alone in Mesoamerica. Through centuries of relentless defiance, they have resisted the influence of both the Nahua and Elysian missionaries. As the sun seems to set on Mesoamerica, will the Purépecha be able to retain their identity?#!"
