Implemented initial events for NAH

--- a/localization/english/replace/map/strategic_regions_l_english.yml
+++ b/localization/english/replace/map/strategic_regions_l_english.yml
@@ -4,10 +4,10 @@
  region_new_england: "Hyperborea"
  region_brazil: "Antarctique"
  region_gran_colombia: "Gran Granada"
- region_mexico: "Aztlan"
+ region_mexico: "Cēmānāhuac"
  region_dixie: "Arkadías"
  region_the_midwest: "The Midwest"
- region_great_plains: "Great Plains"
- region_central_america: "Maya"
+ region_great_plains: "Nʉmʉnʉʉ Sookobitʉ"
+ region_central_america: "Nicānāhuac"
  region_caribbean: "Kykladía"
  region_oceania: "Antipodia"
