--- a/localization/english/tge_flavor_content/tge_mesoamerica_l_english.yml
+++ b/localization/english/tge_flavor_content/tge_mesoamerica_l_english.yml
@@ -4,9 +4,10 @@
 
  # journal entries
  je_tge_golden_eagle: "The Golden Eagle"
- je_tge_golden_eagle_reason: "The [ROOT.GetCountry.GetPowerBloc.GetName] has thundered across [GetStrategicRegion('region_mexico').GetName] spreading the might and authority of the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] across the Altiplano like an eagle soaring across the sun. With the might of [ROOT.GetCountry.GetName] unchallenged, the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] has become a King of Kings, a God-Emperor whose very body constitutes the connection between the [GetCulture('nahua').GetName] people and $tge_huitzilopochtli$.\n\nAs the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] enforces the dogma of [GetReligion('br_tge_religion_teotl').GetName] on his [concept_subject]#o s#!, the wealthiest regions, the Āltepētlapan, seek to maintain their [concept_autonomy]. The [ROOT.GetCountry.GetAdjectiveNoFlag] Empire must secure control over the Altiplano lest it crumble to ruins and the people be delivered unto Mictlantecuhtl."
- je_tge_golden_eagle_complete: "The [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] has maximum support."
- je_tge_golden_eagle_fail: "The [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] has lost all support."
+ je_tge_golden_eagle_reason: "The [ROOT.GetCountry.GetPowerBloc.GetName] has thundered across [GetStrategicRegion('region_mexico').GetName] spreading the might and authority of the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] across the Altiplano like an eagle soaring across the sun. With the might of [ROOT.GetCountry.GetName] unchallenged, the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] has become a King of Kings, a Sun-Emperor whose very body constitutes the connection between the [GetCulture('nahua').GetName] people and $tge_huitzilopochtli$.\n\nAs the [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] enforces the dogma of [GetReligion('br_tge_religion_teotl').GetName] on his [concept_subject]#o s#!, the wealthiest regions, the Āltepētlapan, seek to maintain their [concept_autonomy]. The [ROOT.GetCountry.GetAdjectiveNoFlag] Empire must secure control over the Altiplano lest it crumble to ruins and the people be delivered unto Mictlantecuhtl."
+ je_tge_golden_eagle_complete_1: "The [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] has maximum support"
+ je_tge_golden_eagle_complete_2: "[ROOT.GetCountry.GetNameNoFlag] has its [concept_capital_state] in [GetStateRegion('STATE_MEXICO').GetName] and owns its entire [concept_state_region]"
+ je_tge_golden_eagle_fail: "The [ROOT.GetCountry.GetRuler.GetPrimaryRoleTitle] has lost all support"
 
  je_tge_aztlan: "Reaching for Aztlan"
  je_tge_aztlan_reason: "Centuries ago, our people were driven out from their homes, driven out by the tyrannical king of the land, and guided by Huitzilopochtli to found a new home. That ancestral land was called Aztlan, the Land of Whiteness. Whilst our people may have forgotten the exact location of this land, they at the very least know that it is in the North, where Tezcatlipoca reigns. Let us start our march north and reclaim this ancestral home of ours."
@@ -16,10 +17,15 @@
 
  # Modifiers
  modifier_tge_golden_aspirations: "Aspirations of the Golden Eagle"
+ modifier_tge_coming_darkness: "Coming Darkness"
+ modifier_tge_doomed_empire: "Doomed Empire"
+ modifier_tge_golden_eagle_character: "The Golden Eagle"
+ modifier_tge_golden_eagle_country: "The Golden Eagle"
+ modifier_tge_golden_overlord: "Ascendant Overlord"
 
  # Scripted Progress Bars
- tge_golden_eagle_progressbar: "The Golden Eagle"
- tge_golden_eagle_progressbar_desc: "The Golden Eagle"
+ tge_golden_eagle_progressbar: "#header $tge_imminence$:#!\n[GetPlayer.MakeScope.GetScriptValueDesc('tge_golden_eagle_progress_value')]\n#bold #greece [GetPlayer.MakeScope.Var('tge_golden_eagle_var').GetValue|2]#! #white monthly"
+ tge_golden_eagle_progressbar_desc: "$tge_divine_imminence$"
 
  # Script Value Breakdowns
  tge_value_from_legitimacy: "From [concept_legitimacy]"
@@ -27,3 +33,12 @@
  tge_value_from_army_projection: "From army [concept_power_projection]"
  tge_value_from_literacy: "From [concept_pop] [concept_literacy]"
  tge_value_from_radicals: "From [concept_radical]#o s#!"
+
+ # Triggers
+ 
+ 
+ 
+ # Tooltips
+ tge_divine_imminence: "Divine Imminence"
+ tge_imminence: "Imminence"
+ tge_divine_imminence_desc: "" #TODO Alexedishi
