--- a/localization/english/tge_flavor_content/tge_mesoamerica_l_english.yml
+++ b/localization/english/tge_flavor_content/tge_mesoamerica_l_english.yml
@@ -24,7 +24,7 @@
  modifier_tge_golden_overlord: "Ascendant Overlord"
 
  # Scripted Progress Bars
- tge_golden_eagle_progressbar: "#header $tge_imminence$:#!\n[GetPlayer.MakeScope.GetScriptValueDesc('tge_golden_eagle_progress_value')]\n#bold #greece [GetPlayer.MakeScope.Var('tge_golden_eagle_var').GetValue|2]#! #white monthly"
+ tge_golden_eagle_progressbar: "#header $tge_imminence$:#!\n$TOOLTIP_DELIMITER$\n#![GetPlayer.MakeScope.GetScriptValueDesc('tge_golden_eagle_progress_value')]\n$TOOLTIP_DELIMITER$\n#bold #greece [GetPlayer.MakeScope.Var('tge_golden_eagle_var').GetValue|2]#! #white monthly"
  tge_golden_eagle_progressbar_desc: "$tge_divine_imminence$"
 
  # Script Value Breakdowns
