--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -220,6 +220,14 @@
  br_je_princely_league_main_status_desc_neutral_side: "We are a member of the #b #yellow Neutral#!#! side"
 
  
+ #Venice
+ #br_je_consolidate_stato_de_mar main
+ je_br_consolidate_stato_de_mar: "Consolidate the Stato de Már"
+ je_br_consolidate_stato_de_mar_reason: "In our haste to claim a stake in the New World before it was barred, the administration of Atlantica was built on expediency, not stability. Now, thousands of kilometers away from the Republic, the colonial government’s rushedness is beginning to show, rife with inefficiency, corruption, and a growing sense of independent ambition.\n\nWe must restructure our Atlantic possession, or risk seeing the Lion of St. Mark torn down across the sea."
+ je_br_consolidate_stato_de_mar_lobby: "$je_br_consolidate_stato_de_mar_reason$"
+ #progress bar localizations
+ atlantica_consolidation_progress: "Consolidation Progress"
+
  #'Generic Journals'
  je_reclaim_england: "Reclaim England"
  je_reclaim_england_reason: "Having secured our freedom, it's time to reclaim our rightful lands."
