Consolidate the Stato da Már Fixes & Progress Bar
 - Implemented scripted progress bar
 - 4/5 monthly progress factors implemented successfully
 - Polished and finalized JE appearance
 - Small polish to prevent pileup in error log
 - Added custom interest groups and descriptions for Venice
 - Fixed Stato de Már -> Stato da Már

TODO:
 - Begin implementing JE-specific events, starting with completion events.
 - Small UI fix in progress bar tooltip
 - Deep-Dive into IG ideologies to determine if any changes are desireable
 - Add Amerigan Cultural Awakening at game start
 - Implement fifth monthly progress bar factor for if Atlantica has revolt

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -111,6 +111,18 @@
  ig_cultus_prometheo: "Cultus Prometheo"
  ig_cultus_prometheo_desc: "#lore The Cultus Prometheo is a radical philosophical and religious movement venerating human ingenuity, enlightenment, and rebellion against tyranny. Inspired by the myth of Prometheus, they seek to ignite a new era of liberation and knowledge.#!"
 
+ ig_patriziato_mercantile: "Patriziato Mercantile"
+ ig_patriziato_mercantile_desc: "The heart of the Venetian oligarchy. These patrician families trace their power to the sea, their fortunes built on the spice trade, banking, and a global commercial empire. They are the custodians of the Republic's maritime legacy, believing that Venice's destiny is to rule the waves and the ledger books, favoring a strong navy and policies that ensure the flow of trade and capital."
+
+ ig_landed_aristocracy: "Landed Aristocracy"
+ ig_landed_aristocracy_desc: "The old nobility of the terraferma, the Venetian mainland. Their power is rooted in land, tradition, and the rents extracted from a vast agricultural hinterland. They view the Serene Republic first and foremost as a protector of their hereditary privileges and are deeply suspicious of the mercantile and industrial ambitions of the city, which they see as destabilizing to the natural order."
+
+ ig_ammiragliato: "L'Ammiragliato"
+ ig_ammiragliato_desc: "The Admiralty is the defining factor of Venetian military power, the steel in Venice's velvet glove. Its officers, drawn from noble and cittadini families alike, see the world as a series of strategic chokepoints and vulnerable coasts. They advocate for a powerful fleet to project Venetian power, protect its trade routes, and secure new possessions, believing that a nation's influence is measured by the reach of its gunships."
+
+ ig_nuova_impresa: "Nuova Impresa"
+ ig_nuova_impresa_desc: "The 'New Enterprise.' This class of innovators, master shipwrights from the Arsenale, and industrial capitalists emerged from the cittadini originari. They are the architects of the new Venetian economy, channeling the Republic's legendary mercantile wealth into factories, railroads, and mechanized production. They are visionaries who believe progress is measured in output and efficiency, and they push for infrastructure and policies that fuel industrial growth, often clashing with the traditional mercantilism of the Patricians."
+
 
  ## ideologies
 
