Consolidation Progress w/ Civil War
- Progress for Consolidate the Stato da Már will now have a -2 modifier when Atlantica is fighting a revolt or secession.

--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -6,3 +6,4 @@
  br_venice_consolidate_progress_bar_legitimacy_atl: "From Atlantican Government Legitimacy" 
  br_venice_consolidate_progress_bar_relations: "From Relations with Atlantica"
  br_venice_consolidate_progress_bar_liberty_desire: "From Atlantican Liberty Desire"
+ br_venice_consolidate_progress_bar_revolt: "From Atlantica fighting a Civil War"
