temp push for bugtesting

--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -7,3 +7,14 @@
  br_venice_consolidate_progress_bar_relations: "From Relations with Atlantica"
  br_venice_consolidate_progress_bar_liberty_desire: "From Atlantican Liberty Desire"
  br_venice_consolidate_progress_bar_revolt: "From Atlantica fighting a Civil War"
+
+ # events for Consolidate the Stato da Már
+ br_venice_consolidate_atlantica.99.t: "The Roar Heard Across the Sea"
+ br_venice_consolidate_atlantica.99.d: "The Stato de Màr is secure. Through a masterful blend of reform, diplomacy, and resolve, we have reforged our Atlantican possession into a loyal and prosperous cornerstone of the Republic."
+ br_venice_consolidate_atlantica.99.f: "The work is done. The grumbling has ceased, the flags fly true, and the Lion of St. Mark now watches over a colony reborn. In the grand piazzas of L'Avana, they speak Venetian with pride; in the halls of the Grand Council, Atlantican representatives take their advisory seats. \n\n We did not break them. We did not abandon them. We remade them in our image, and in doing so, have created a power that will echo across the centuries. The Serene Republic is no longer just a European power, it is an Atlantic empire."
+ br_venice_consolidate_atlantica.99.a: "The Mercantile Crown shall never dip from our Brow!" 
+ br_venice_consolidate_atlantica.99.b: "Atlantica will become our breadbasket!"
+ br_venice_consolidate_atlantica.99.c: "Our people will prosper under Venetian rule."
+
+ # Modifiers for Consolidate the Stato da Már events
+ br_modifier_venice_atlantica_consolidation_success_all: "Successful Consolidation"
