Journal Entry Polish
- Improved tooltips in Consolidate the Stato da Màr JE. Looks much nicer and is much more useful.
- Changed Már to Màr for Venetian spelling consistency.

--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -222,11 +222,11 @@
  
  #Venice
  #br_je_consolidate_stato_da_mar main
- je_br_consolidate_stato_da_mar: "Consolidate the Stato da Már"
+ je_br_consolidate_stato_da_mar: "Consolidate the Stato da Màr"
  je_br_consolidate_stato_da_mar_reason: "In our haste to claim a stake in the New World before it was barred, the administration of Atlantica was built on expediency, not stability. Now, thousands of kilometers away from the Republic, the colonial government’s rushedness is beginning to show, rife with inefficiency, corruption, and a growing sense of independent ambition.\n\nWe must restructure our Atlantic possession, or risk seeing the Lion of St. Mark torn down across the sea."
  je_br_consolidate_stato_da_mar_lobby: "$je_br_consolidate_stato_da_mar_reason$"
  je_br_consolidate_progress_complete_tt: "Reach 100% Consolidation Progress through administrative efforts"
- je_br_consolidate_annexation_complete_tt: "Completely annex Atlantica and dismantle the colonial government"
+ je_br_consolidate_annexation_complete_tt: "Completely annex [SCOPE.sCountry('atlantica_scope').GetName] by conquering [GetStateRegion('STATE_CUBA').GetName], [GetStateRegion('STATE_BAHAMAS').GetName], and [GetStateRegion('STATE_FLORIDA').GetName], then dismantling the colonial government"
 
  #'Generic Journals'
  je_reclaim_england: "Reclaim England"
