--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -8,15 +8,15 @@
  br_venice_consolidate_progress_bar_liberty_desire: "From Atlantican Liberty Desire"
  br_venice_consolidate_progress_bar_revolt: "From Atlantica fighting a Civil War"
 
- # events for Consolidate the Stato da Már
+ # events for Consolidate the Stato da Màr
  br_venice_events.99.t: "The Roar Heard Across the Sea"
- br_venice_events.99.d: "The Stato de Màr is secure. Through a masterful blend of reform, diplomacy, and resolve, we have reforged our Atlantican possession into a loyal and prosperous cornerstone of the Republic."
+ br_venice_events.99.d: "The Stato da Màr is secure. Through a masterful blend of reform, diplomacy, and resolve, we have reforged our Atlantican possession into a loyal and prosperous cornerstone of the Republic."
  br_venice_events.99.f: "The work is done. The grumbling has ceased, the flags fly true, and the Lion of St. Mark now watches over a colony reborn. In the grand piazzas of L'Avana, they speak Venetian with pride; in the halls of the Grand Council, Atlantican representatives take their advisory seats. \n\n We did not break them. We did not abandon them. We remade them in our image, and in doing so, have created a power that will echo across the centuries. The Serene Republic is no longer just a European power, it is an Atlantic empire."
  br_venice_events.99.a: "The Mercantile Crown shall never dip from our Brow!" 
  br_venice_events.99.b: "Atlantica will become our breadbasket!"
  br_venice_events.99.c: "All who live under Venetian rule shall prosper."
 
- # Modifiers for Consolidate the Stato da Már events
+ # Modifiers for Consolidate the Stato da Màr events
  br_modifier_venice_consolidate_success: "Successful Consolidation"
  br_modifier_venice_consolidate_success_trade: "Smooth Sailing"
  br_modifier_venice_consolidate_success_trade2: "Prosperous Waters"
