Annexation Completion Event
- Added event for if Consolidate the Stato da Màr is completed by annexing Atlantica.

--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -16,9 +16,16 @@
  br_venice_events.99.b: "Atlantica will become our breadbasket!"
  br_venice_events.99.c: "All who live under Venetian rule shall prosper."
 
+ br_venice_events.100.t: "The Lion's Share"
+ br_venice_events.100.d: "The question of Atlantican sovereignty has been answered by the sword. The colony is no more; its lands are now direct possessions of the Serene Republic."
+ br_venice_events.100.f: "They challenged our rule, and we have shown them the cost. The Governor's Palace now houses a Venetian magistrate. Their militias are disbanded, their separate identity suppressed. What was once a reconciliation become a conquest. The land is ours, but the people's hearts are not. We have gained territory at the cost of creating a sullen, resentful populace that will require a heavy hand to govern for generations."
+ br_venice_events.100.a: "A necessary action to ensure stability."
+
  # Modifiers for Consolidate the Stato da Màr events
  br_modifier_venice_consolidate_success: "Successful Consolidation"
  br_modifier_venice_consolidate_success_trade: "Smooth Sailing"
  br_modifier_venice_consolidate_success_trade2: "Prosperous Waters"
  br_modifier_venice_consolidate_success_agriculture: "Bountiful Harvests"
  br_modifier_venice_consolidate_success_government: "Loyal Subjects"
+ br_modifier_venice_annexation: "Direct Colonial Control"
+ br_modifier_venice_annexation2: "Resentful Annexation"
