Added Failure Event
- If JE is failed, a revolution will be triggered against Venice
TODO:
- Consequences after Revolution loss or victory
- Events in which Atlantica can pick up guarantees for independence from Venetian rivals
- May want to see if the new Guerilla war features can be used for the revolution.

--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -21,6 +21,11 @@
  br_venice_events.100.f: "They challenged our rule, and we have shown them the cost. The Governor's Palace now houses a Venetian magistrate. Their militias are disbanded, their separate identity suppressed. What was once a reconciliation become a conquest. The land is ours, but the people's hearts are not. We have gained territory at the cost of creating a sullen, resentful populace that will require a heavy hand to govern for generations."
  br_venice_events.100.a: "A necessary action to ensure stability."
 
+ br_venice_events.101.t: "The Lost Lion"
+ br_venice_events.101.d: "We have lost the Stato Da Már. Through misrule, weakness, or sheer misfortune, our Atlantican possession has slipped from our grasp, a humiliating blow to the Republic's prestige and power."
+ br_venice_events.101.f: "The dream is dead. The reports are final. The Lion has been torn down. Whether by a formal declaration of independence or a slow, bureaucratic death, our influence is ended. The ships that once carried wealth now carry only bitter memories. In the cafes of Venice, they speak of the one that got away, the great failure of our age. Our rivals laugh, our subjects doubt us, and a new power now wages war across the sea."
+ br_venice_events.101.a: "Such is the cost of ambition."
+
  # Modifiers for Consolidate the Stato da Màr events
  br_modifier_venice_consolidate_success: "Successful Consolidation"
  br_modifier_venice_consolidate_success_trade: "Smooth Sailing"
@@ -29,3 +34,4 @@
  br_modifier_venice_consolidate_success_government: "Loyal Subjects"
  br_modifier_venice_annexation: "Direct Colonial Control"
  br_modifier_venice_annexation2: "Resentful Annexation"
+ br_modifier_venice_consolidate_failure: "The Lost Stato Da Már"
