--- a/localization/english/br_venice_l_english.yml
+++ b/localization/english/br_venice_l_english.yml
@@ -26,6 +26,12 @@
  br_venice_events.101.f: "The dream is dead. The reports are final. The Lion has been torn down. Whether by a formal declaration of independence or a slow, bureaucratic death, our influence is ended. The ships that once carried wealth now carry only bitter memories. In the cafes of Venice, they speak of the one that got away, the great failure of our age. Our rivals laugh, our subjects doubt us, and a new power now wages war across the sea."
  br_venice_events.101.a: "Such is the cost of ambition."
 
+ br_venice_events.104.t: "The Creeping Schism"
+ br_venice_events.104.d: "Though avoiding a revolution, La Serenissima failed to properly consolidate the colonial government of Atlantica before its own culture and systems of governance became entrenched, creating a permanent rift between Venice and her colony."
+ br_venice_events.104.f: "Two decades of commissions, debated reforms, and bureaucratic indecision have only served to yield alienation. While the Council deliberated, Atlantica grew into its own. Its merchants forged independent networks, its planters learned self-governance, and its people forged a new identity. The bonds of culture and commerce remain, but they have been stretched thin. The colony we once held is now a separate entity, bound to us by history and necessity, but no longer by unquestioned loyalty."
+ br_venice_events.104.a: "A partnership, then, is preferable to a quarrel."
+ br_venice_events.104.b: "Their ingratitude will not be forgotten."
+
  # Modifiers for Consolidate the Stato da Màr events
  br_modifier_venice_consolidate_success: "Successful Consolidation"
  br_modifier_venice_consolidate_success_trade: "Smooth Sailing"
@@ -35,3 +41,6 @@
  br_modifier_venice_annexation: "Direct Colonial Control"
  br_modifier_venice_annexation2: "Resentful Annexation"
  br_modifier_venice_consolidate_failure: "The Lost Stato Da Már"
+ br_modifier_venice_consolidate_timeout: "The Atlantican Identity"
+ br_modifier_venice_consolidate_timeout: "Venetian Resentment"
+ br_modifier_venice_consolidate_timeout3: "A Turn Inwards"
